plus minus for merchant

--- a/www/takePayment.html
+++ b/www/takePayment.html
@@ -17,8 +17,8 @@
 <div id="merchantAmount" class="step amount">
   <div class="actionName">Select the amount you want to charge</div>
   <div class="actionContents">
-    +-</br>
-    $<input type="text" value=30>
+    <button id=plus>+</button><button id=minus>-</button></br>
+    $<input value=30 type="number">
   </div>
   <button id="ok" type="button" class="btn">OK</button>
 </div>
