--- a/www/topUpRing.html
+++ b/www/topUpRing.html
@@ -18,7 +18,7 @@
   <div class="actionName">Amount to send to Ring</div>
   <div class="actionContents">
     <button id=plus>+</button><button id=minus>-</button></br>
-    $<input type="text" value=30>
+    $<input type="number" value=30>
   </div>
   <p>Max top up amount, 30$</p>
   <button id="ok" type="button" class="btn">OK</button>
@@ -27,7 +27,7 @@
 <div id="enterPin" class="step enterPin">
   <div class="actionName">Enter your PIN Number</div>
   <div class="actionContents">
-    <input type="password">
+    <input type="password" pattern="[0-9]*">
   </div>
   <button id="ok" type="button" class="btn">OK</button>
 </div>
