fix buttons for merhcant

--- a/www/topUpRing.html
+++ b/www/topUpRing.html
@@ -18,7 +18,7 @@
   <div class="actionName">Amount to send to Ring</div>
   <div class="actionContents">
     <button id=plus>+</button><button id=minus>-</button></br>
-    $<input type="number" value=30>
+    $<input value=30 type="number">
   </div>
   <p>Max top up amount, 30$</p>
   <button id="ok" type="button" class="btn">OK</button>
