i prefer passwords over pins

--- a/www/topUpRing.html
+++ b/www/topUpRing.html
@@ -25,9 +25,9 @@
 </div>
 
 <div id="enterPin" class="step enterPin">
-  <div class="actionName">Enter your PIN Number</div>
+  <div class="actionName">Enter your Password</div>
   <div class="actionContents">
-    <input type="password" pattern="[0-9]*">
+    <input type="password">
   </div>
   <button id="ok" type="button" class="btn">OK</button>
 </div>
