--- a/www/topUpRing.html
+++ b/www/topUpRing.html
@@ -20,7 +20,7 @@
     <button id=plus>+</button><button id=minus>-</button></br>
     £<input value=30 type="number">
   </div>
-  <p>Max top up amount, 30$</p>
+  <p>Max top up amount, £30</p>
   <button id="ok" type="button" class="btn">OK</button>
 </div>
 
