--- a/www/takePayment.html
+++ b/www/takePayment.html
@@ -18,7 +18,7 @@
   <div class="actionName">Select the amount you want to charge</div>
   <div class="actionContents">
     <button id=plus>+</button><button id=minus>-</button></br>
-    £<input value=3 type="number">
+	<div class="currency">£</div><input value=3 type="number">
   </div>
   <button id="ok" type="button" class="btn">OK</button>
 </div>
